refactor: 优化消息获取